--- a/site/index.html
+++ b/site/index.html
@@ -1,4 +1,7 @@
 
 <html>
+  <head>
+    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
+  </head>
   <body>hi, there</body>
 </html>
