--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -6,7 +6,7 @@
     <link id="_style" rel="stylesheet" media="all" href="/BareCSS/site/css/main.css">
   </head>
   <body>
-    <header><a style="cursor:default">
+    <header><a href="/BareCSS/site">
         <style>
           #logo {
             font-weight: 600;
@@ -22,7 +22,7 @@
         </style>
         <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a></header>
     <main>
-      <article class="_container"><a href="basics">basics</a></article>
+      <article class="_container">basics</article>
       <aside></aside>
     </main>
     <footer></footer>
