--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -4,29 +4,41 @@
     <title>BareCSS</title>
     <meta id="_color_scheme" name="color-scheme" content="light dark">
     <link id="_style" rel="stylesheet" media="all" href="/BareCSS/site/css/main.css">
+    <style>/* write your style here */</style>
+    <style>
+      #logo {
+        font-weight: 600;
+        padding: .25rem .5rem;
+        display: inline-block;
+        cursor: default;
+        border-radius: .3rem;
+      }
+      #logo .s1 { color:#000 }
+      #logo .s2 { color:#6481ff }
+      ._dark #logo .s1 { color:#fff }
+      a #logo { cursor:pointer }
+      a #logo:hover { background-color:#8883 }
+      a #logo:active { opacity:.3 }
+      .maindesc { margin:0 .5rem;font-size:.9em }
+    </style>
   </head>
   <body>
-    <header><a href="/BareCSS/site">
-        <style>
-          #logo {
-            font-weight: 600;
-            margin: .5rem .25rem;
-            padding: .25rem .5rem;
-            display: inline-block;
-            border-radius:.3rem;
-          }
-          #logo .s1 { color:#fff }
-          #logo .s2 { color:#6481ff }
-          #logo:hover { background-color:#8883 }
-          #logo:active { opacity:.3 }
-        </style>
-        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a></header>
+    <header class="_container"><a href="/BareCSS/site">
+        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Minimal CSS framework for a clean layout.</span></header>
+    <hr>
     <main>
-      <article class="_container">basics</article>
+      <nav class="_container"><a href="/BareCSS/site">Home</a> 
+        Basics 
+      </nav>
+      <hr>
+      <article class="_container">
+        <pre>// hey</pre>
+      </article>
       <aside></aside>
     </main>
     <footer></footer>
     <aside></aside>
+    <script src="/BareCSS/site/js/thm.js"></script>
     <script>console.log('hi, there');</script>
   </body>
 </html>
