--- a/site/index.html
+++ b/site/index.html
@@ -4,29 +4,54 @@
     <title>BareCSS</title>
     <meta id="_color_scheme" name="color-scheme" content="light dark">
     <link id="_style" rel="stylesheet" media="all" href="/BareCSS/site/css/main.css">
+    <style>/* write your style here */</style>
+    <style>
+      #logo {
+        font-weight: 600;
+        padding: .25rem .5rem;
+        display: inline-block;
+        cursor: default;
+        border-radius: .3rem;
+      }
+      #logo .s1 { color:#000 }
+      #logo .s2 { color:#6481ff }
+      ._dark #logo .s1 { color:#fff }
+      a #logo { cursor:pointer }
+      a #logo:hover { background-color:#8883 }
+      a #logo:active { opacity:.3 }
+      .maindesc { margin:0 .5rem;font-size:.9em }
+    </style>
+    <style>
+      blockquote { 
+        background-color: #8882;
+        padding: 2em;
+        margin: 1em;
+      }
+    </style>
   </head>
   <body>
-    <header><a style="cursor:default">
-        <style>
-          #logo {
-            font-weight: 600;
-            margin: .5rem .25rem;
-            padding: .25rem .5rem;
-            display: inline-block;
-            border-radius:.3rem;
-          }
-          #logo .s1 { color:#fff }
-          #logo .s2 { color:#6481ff }
-          #logo:hover { background-color:#8883 }
-          #logo:active { opacity:.3 }
-        </style>
-        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a></header>
+    <header class="_container">
+      <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div><span class="maindesc">Minimal CSS framework for a clean layout.</span>
+    </header>
+    <hr>
     <main>
-      <article class="_container"><a href="basics">basics</a></article>
+      <nav class="_container">Home <a href="basics">Basics</a></nav>
+      <hr>
+      <article class="_container">
+        <pre>To create the best collection of short ways to get the desired layout.
+
+Author  : Techie Joe
+Year    : 2025
+Version : 0.1.0.(alpha)
+LICENSE : MIT
+
+Copyright (c) 2025 Techie Joe</pre>
+      </article>
       <aside></aside>
     </main>
     <footer></footer>
     <aside></aside>
+    <script src="/BareCSS/site/js/thm.js"></script>
     <script>console.log('hi, there');</script>
   </body>
 </html>
