--- a/site/index.html
+++ b/site/index.html
@@ -21,13 +21,7 @@
       a #logo:active { opacity:.3 }
       .maindesc { margin:0 .5rem;font-size:.9em }
     </style>
-    <style>
-      blockquote { 
-        background-color: #8882;
-        padding: 2em;
-        margin: 1em;
-      }
-    </style>
+    <style></style>
   </head>
   <body>
     <header class="_container">
@@ -38,18 +32,19 @@
       <nav class="_container">Home <a href="basics">Basics</a></nav>
       <hr>
       <article class="_container">
-        <pre>To create the best collection of short ways to get the desired layout.
+        <pre>Vision  : To create the best collection of short ways to get a clean layout.
 
 Author  : Techie Joe
 Year    : 2025
 Version : 0.1.0.(alpha)
-LICENSE : MIT
-
-Copyright (c) 2025 Techie Joe</pre>
+LICENSE : MIT</pre>
       </article>
       <aside></aside>
     </main>
-    <footer></footer>
+    <footer>
+      <hr class="_m0">
+      <div class="_container"><small>Copyright (c) 2025 Techie Joe</small></div>
+    </footer>
     <aside></aside>
     <script src="/BareCSS/site/js/thm.js"></script>
     <script>console.log('hi, there');</script>
