--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="_container"><a href="/BareCSS/site">
-        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Minimal CSS framework for a clean layout.</span></header>
+        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Minimal framework for a clean layout.</span></header>
     <hr>
     <main>
       <nav class="_container"><a href="/BareCSS/site">Home</a> 
@@ -36,7 +36,10 @@
       </article>
       <aside></aside>
     </main>
-    <footer></footer>
+    <footer>
+      <hr class="_m0">
+      <div class="_container"><small>Copyright (c) 2025 Techie Joe. All rights reserved.</small></div>
+    </footer>
     <aside></aside>
     <script src="/BareCSS/site/js/thm.js"></script>
     <script>console.log('hi, there');</script>
