--- a/site/index.html
+++ b/site/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header class="_container">
-      <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div><span class="maindesc">Minimal CSS framework for a clean layout.</span>
+      <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div><span class="maindesc">Minimal framework for a clean layout.</span>
     </header>
     <hr>
     <main>
