--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@ LICENSE : MIT</pre>
     </main>
     <footer>
       <hr class="_m0">
-      <div class="_container"><small>Copyright (c) 2025 Techie Joe</small></div>
+      <div class="_container"><small>Copyright (c) 2025 Techie Joe. All rights reserved.</small></div>
     </footer>
     <aside></aside>
     <script src="/BareCSS/site/js/thm.js"></script>
