--- a/site/index.html
+++ b/site/index.html
@@ -2,12 +2,21 @@
 <html>
   <head>
     <title>BareCSS</title>
-    <meta id="_color_scheme" name="color-scheme" content="light dark">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
+    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
+    <meta id="_theme_color" name="theme-color" content="#222"/>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/BareCSS/site/icons/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/BareCSS/site/icons/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/BareCSS/site/icons/favicon-16x16.png"/>
+    <link rel="icon" type="image/x-icon" sizes="any" href="/BareCSS/site/icons/favicon.ico"/>
+    <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     <link id="_style" rel="stylesheet" media="all" href="/BareCSS/site/css/main.css">
     <style>/* write your style here */</style>
     <style>
       #logo {
         font-weight: 600;
+        margin: .25rem 0;
         padding: .25rem .5rem;
         display: inline-block;
         cursor: default;
@@ -19,7 +28,12 @@
       a #logo { cursor:pointer }
       a #logo:hover { background-color:#8883 }
       a #logo:active { opacity:.3 }
-      .maindesc { margin:0 .5rem;font-size:.9em }
+      .maindesc {
+        margin:0 .5rem;
+        font-size: 0.9em;
+        line-height: 1.25;
+        vertical-align: text-top;
+      }
     </style>
     <style></style>
   </head>
@@ -29,10 +43,11 @@
     </header>
     <hr>
     <main>
-      <nav class="_container">Home <a href="basics">Basics</a></nav>
+      <nav class="_container">Home <a href="basics">Basics</a> 
+      </nav>
       <hr>
       <article class="_container">
-        <pre>Vision  : To create the best collection of short ways to get a clean layout.
+        <pre class="_scrollable">Vision  : To create the best collection of short ways to get a clean layout.
 
 Author  : Techie Joe
 Year    : 2025
