--- a/site/index.html
+++ b/site/index.html
@@ -17,6 +17,7 @@
       #logo {
         font-weight: 600;
         margin: .25rem 0;
+        margin-left: -.5rem;
         padding: .25rem .5rem;
         display: inline-block;
         cursor: default;
@@ -58,7 +59,7 @@ LICENSE : MIT</pre>
     </main>
     <footer>
       <hr class="_m0">
-      <div class="_container"><small>Copyright (c) 2025 Techie Joe. All rights reserved.</small></div>
+      <div class="_container"><small>&copy; 2025 Techie Joe. All rights reserved.</small></div>
     </footer>
     <aside></aside>
     <script src="/BareCSS/site/js/thm.js"></script>
