--- a/site/index.html
+++ b/site/index.html
@@ -16,8 +16,8 @@
     <style>
       #logo {
         font-weight: 600;
-        margin: .25rem 0;
         margin-left: -.5rem;
+        margin-right: .25rem;
         padding: .25rem .5rem;
         display: inline-block;
         cursor: default;
@@ -30,7 +30,6 @@
       a #logo:hover { background-color:#8883 }
       a #logo:active { opacity:.3 }
       .maindesc {
-        margin:0 .5rem;
         font-size: 0.9em;
         line-height: 1.25;
         vertical-align: text-top;
