--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/BareCSS/site/icons/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/BareCSS/site/icons/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="/BareCSS/site/icons/favicon-16x16.png"/>
-    <link rel="icon" type="image/x-icon" sizes="any" href="/BareCSS/site/icons/favicon.ico"/>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/barecss/site/icons/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/barecss/site/icons/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/barecss/site/icons/favicon-16x16.png"/>
+    <link rel="icon" type="image/x-icon" sizes="any" href="/barecss/site/icons/favicon.ico"/>
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-    <link id="_style" rel="stylesheet" media="all" href="/BareCSS/site/css/main.css">
+    <link id="_style" rel="stylesheet" media="all" href="/barecss/site/css/main.css">
     <style>/* write your style here */</style>
     <style>
       #logo {
@@ -37,11 +37,11 @@
     </style>
   </head>
   <body>
-    <header class="_container"><a href="/BareCSS/site/">
+    <header class="_container"><a href="/barecss/site/">
         <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Minimal framework for a clean layout.</span></header>
     <hr>
     <main>
-      <nav class="_container"><a href="/BareCSS/site/">Home</a> Basics 
+      <nav class="_container"><a href="/barecss/site/">Home</a> Basics 
       </nav>
       <hr>
       <article class="_container">
@@ -54,7 +54,7 @@
       <div class="_container"><small>&copy; 2025 Techie Joe. All rights reserved.</small></div>
     </footer>
     <aside></aside>
-    <script src="/BareCSS/site/js/thm.js"></script>
+    <script src="/barecss/site/js/thm.js"></script>
     <script>console.log('hi, there');</script>
   </body>
 </html>
