--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -38,10 +38,11 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Minimal framework for a clean layout.</span></header>
+        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Minimal framework for a clean layout.</span>
+    </header>
     <hr>
     <main>
-      <nav class="_container"><a href="/barecss/site/">Home</a> Basics 
+      <nav class="_container"><a href="/barecss/site/">Home</a> Basics <a href="/barecss/site/test.html">Test</a> 
       </nav>
       <hr>
       <article class="_container">
