--- a/site/test.html
+++ b/site/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BareCSS</title>
+    <title>Test | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -38,22 +38,27 @@
     <style></style>
   </head>
   <body>
-    <header class="_container"><span>
-        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span class="maindesc">Minimal framework for a clean layout.</span>
+    <header class="_container"><a href="/barecss/site/">
+        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Testing upcoming features and upgrades.</span>
     </header>
     <hr>
     <main>
-      <nav class="_container">Home <a href="/barecss/site/basics">Basics</a> <a href="/barecss/site/test.html">Test</a> 
+      <nav class="_container"><a href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> Test 
       </nav>
       <hr>
       <article class="_container">
-        <pre class="_scrollable">Vision  : To create the best collection of short ways to get a clean layout.
-
-Author  : Techie Joe
-Year    : 2025
-Version : 0.1.0.(alpha)
-
-LICENSE : MIT</pre>
+        <details>
+          <summary>Summary</summary>
+          <div class="_content _scrollable">
+            <div class="_container">
+              <pre>// details</pre>
+            </div>
+          </div>
+        </details>
+      </article>
+      <hr>
+      <article class="_container">
+        <pre class="_scrollable">// test</pre>
       </article>
       <aside></aside>
     </main>
