--- a/site/index.html
+++ b/site/index.html
@@ -39,11 +39,11 @@
   </head>
   <body>
     <header class="_container"><span>
-        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span class="maindesc">Minimal framework for a clean layout.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span class="maindesc">Minimal framework for a clean layout.</span>
     </header>
     <hr>
     <main>
-      <nav class="_container">Home <a href="/barecss/site/basics">Basics</a> <a href="/barecss/site/test.html">Test</a> 
+      <nav class="_container"><a class="_active" href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> <a href="/barecss/site/test.html">Test</a> 
       </nav>
       <hr>
       <article class="_container">
@@ -62,7 +62,7 @@ LICENSE : MIT</pre>
       <div class="_container"><small>&copy; 2025 Techie Joe. All rights reserved.</small></div>
     </footer>
     <aside></aside>
-    <script src="/barecss/site/js/thm.js"></script>
+    <script src="/barecss/site/js/theme_v1.0.js"></script>
     <script>console.log('hi, there');</script>
   </body>
 </html>
