--- a/site/test.html
+++ b/site/test.html
@@ -39,16 +39,16 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Testing upcoming features and upgrades.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">| Lab</span>
     </header>
     <hr>
     <main>
-      <nav class="_container"><a href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> Test 
+      <nav class="_container"><a href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> <a class="_active" href="/barecss/site/test.html">Test</a> 
       </nav>
       <hr>
       <article class="_container">
         <details>
-          <summary>Summary</summary>
+          <summary class="_no_select">Summary</summary>
           <div class="_content _scrollable">
             <div class="_container">
               <pre>// details</pre>
@@ -67,7 +67,7 @@
       <div class="_container"><small>&copy; 2025 Techie Joe. All rights reserved.</small></div>
     </footer>
     <aside></aside>
-    <script src="/barecss/site/js/thm.js"></script>
+    <script src="/barecss/site/js/theme_v1.0.js"></script>
     <script>console.log('hi, there');</script>
   </body>
 </html>
