update main style

--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -42,11 +42,11 @@
     </header>
     <hr>
     <main>
-      <nav class="_container"><a href="/barecss/site/">Home</a> <a class="_active" href="/barecss/site/basics">Basics</a> <a href="/barecss/site/test.html">Test</a> 
+      <nav class="_container"><a href="/barecss/site/">Home</a> <a class="_active" href="/barecss/site/basics">Basics</a> <a href="/barecss/site/test.html">Lab</a> 
       </nav>
       <hr>
       <article class="_container">
-        <pre>// hey</pre>
+        <pre>// basics</pre>
       </article>
       <aside></aside>
     </main>
