--- a/site/index.html
+++ b/site/index.html
@@ -43,11 +43,11 @@
     </header>
     <hr>
     <main>
-      <nav class="_container"><a class="_active" href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> <a href="/barecss/site/test.html">Test</a> 
+      <nav class="_container"><a class="_active" href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> <a href="/barecss/site/test.html">Lab</a> 
       </nav>
       <hr>
       <article class="_container">
-        <pre class="_scrollable">Vision  : To create the best collection of short ways to get a clean layout.
+        <pre class="_scrollable">Vision  : To create the best collection of a clean layout.
 
 Author  : Techie Joe
 Year    : 2025
