--- a/site/test.html
+++ b/site/test.html
@@ -43,7 +43,7 @@
     </header>
     <hr>
     <main>
-      <nav class="_container"><a href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> <a class="_active" href="/barecss/site/test.html">Test</a> 
+      <nav class="_container"><a href="/barecss/site/">Home</a> <a href="/barecss/site/basics">Basics</a> <a class="_active" href="/barecss/site/test.html">Lab</a> 
       </nav>
       <hr>
       <article class="_container">
