--- a/site/basics/details.html
+++ b/site/basics/details.html
@@ -30,7 +30,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>Basics | BareCSS</title>
+    <title>Details | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -42,23 +42,60 @@
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     <link id="_style" rel="stylesheet" media="all" href="/barecss/site/css/main.css">
     <style>/* write your style here */</style>
+    <style></style>
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Common components.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Styling details and summary elements.</span>
     </header>
     <hr>
     <main>
       <nav class="_container">
-        <div class="_color_2" style="margin:-.5rem !important"><a class="_a1" href="/barecss/site/">Home</a><a class="_a1 _active" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        <div class="_color_2" style="margin:-.5rem !important"><a class="_a1" href="/barecss/site/">Home</a><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/lab">Lab</a>
         </div>
       </nav>
-      <hr>
-      <nav class="_container">
-        <div class="_color_1" style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/basics/link.html">Link</a><a class="_a2" href="/barecss/site/basics/details.html">Details</a>
-        </div>
-      </nav>
-      <hr>
+      <article style="padding-bottom:1.8rem">
+        <hr>
+        <section class="_container">
+          <div class="_color_1" style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/basics/link.html">Link</a><a class="_a2 _active" href="/barecss/site/basics/details.html">Details</a>
+          </div>
+        </section>
+        <hr>
+        <section class="_container">
+          <details>
+            <summary class="_no_select">Summary</summary>
+            <div class="_content _scrollable">
+              <div class="_container">
+                <pre class="_scrollable pre">
+name             = BareCSS
+version          = 0.1.0.(alpha)
+
+title            = Details | BareCSS
+description      = Styling details and summary elements.
+vision           = To create the best collection of clean layouts.
+
+author           = Techie Joe
+year             = 2025
+license          = MIT
+
+layout           = undefined
+pageid           = basics/details
+siteUrl          = https://techiejoe.github.io/barecss
+homeUri          = /barecss/site/
+
+og_url           = https://techiejoe.github.io/barecss?utm_source=homescreen
+og_type          = website
+og_title         = Details | BareCSS
+og_description   = Styling details and summary elements.
+og_image         = 
+og_imageAlt      = 
+</pre>
+              </div>
+            </div>
+          </details>
+        </section>
+        <hr>
+      </article>
       <aside id="_asides"></aside>
     </main>
     <footer>
