--- a/site/lab/index.html
+++ b/site/lab/index.html
@@ -30,7 +30,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>Basics | BareCSS</title>
+    <title>Lab | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -42,23 +42,26 @@
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     <link id="_style" rel="stylesheet" media="all" href="/barecss/site/css/main.css">
     <style>/* write your style here */</style>
+    <style></style>
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Common components.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Testing upcoming features and upgrades.</span>
     </header>
     <hr>
     <main>
       <nav class="_container">
-        <div class="_color_2" style="margin:-.5rem !important"><a class="_a1" href="/barecss/site/">Home</a><a class="_a1 _active" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        <div class="_color_2" style="margin:-.5rem !important"><a class="_a1" href="/barecss/site/">Home</a><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1 _active" href="/barecss/site/lab">Lab</a>
         </div>
       </nav>
-      <hr>
-      <nav class="_container">
-        <div class="_color_1" style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/basics/link.html">Link</a><a class="_a2" href="/barecss/site/basics/details.html">Details</a>
-        </div>
-      </nav>
-      <hr>
+      <article>
+        <hr>
+        <section class="_container">
+          <div class="_color_1" style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/lab/test.html">Test</a>
+          </div>
+        </section>
+        <hr>
+      </article>
       <aside id="_asides"></aside>
     </main>
     <footer>
