--- a/site/basics/link.html
+++ b/site/basics/link.html
@@ -2,7 +2,7 @@
 <style>
   #logo {
     font-weight: 600;
-    margin-left: -.5rem;
+    margin-left: -.25rem;
     margin-right: .25rem;
     padding: .25rem .5rem;
     display: inline-block;
@@ -57,7 +57,7 @@
       <article style="padding-bottom:1.8rem">
         <hr>
         <section class="_container">
-          <div class="_color_1" style="margin:-.5rem !important"><a class="_a2 _active" href="/barecss/site/basics/link.html">Link</a><a class="_a2" href="/barecss/site/basics/details.html">Details</a>
+          <div style="margin:-.5rem !important"><a class="_a2 _active" href="/barecss/site/basics/link.html">Link</a><a class="_a2" href="/barecss/site/basics/details.html">Details</a>
           </div>
         </section>
         <hr>
@@ -81,47 +81,6 @@
           <a class="_link _u_double" href="#">Double</a> 
           <a class="_link _u_wavy" href="#">Wavy</a> 
           <script>document.getElementById('hyperlink').href+='?t='+(new Date().getTime());</script>
-        </section>
-        <hr>
-        <section class="_container"><span class="_u">Underlined</span> 
-          <span class="_u_dotted">Dotted</span> 
-          <span class="_u_dashed">Dashed</span> 
-          <span class="_u_double">Double</span> 
-          <span class="_u_wavy">Wavy</span> 
-        </section>
-        <hr>
-        <section class="_container">
-          <details>
-            <summary class="_no_select">Summary</summary>
-            <div class="_content _scrollable">
-              <div class="_container">
-                <pre class="_scrollable pre">
-name             = BareCSS
-version          = 0.1.0.(alpha)
-
-title            = Link | BareCSS
-description      = Styling hyperlinks.
-vision           = To create the best collection of clean layouts.
-
-author           = Techie Joe
-year             = 2025
-license          = MIT
-
-layout           = undefined
-pageid           = basics/link
-siteUrl          = https://techiejoe.github.io/barecss
-homeUri          = /barecss/site/
-
-og_url           = https://techiejoe.github.io/barecss?utm_source=homescreen
-og_type          = website
-og_title         = Link | BareCSS
-og_description   = Styling hyperlinks.
-og_image         = 
-og_imageAlt      = 
-</pre>
-              </div>
-            </div>
-          </details>
         </section>
         <hr>
       </article>
