--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -2,7 +2,7 @@
 <style>
   #logo {
     font-weight: 600;
-    margin-left: -.5rem;
+    margin-left: -.25rem;
     margin-right: .25rem;
     padding: .25rem .5rem;
     display: inline-block;
@@ -55,7 +55,7 @@
       </nav>
       <hr>
       <nav class="_container">
-        <div class="_color_1" style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/basics/link.html">Link</a><a class="_a2" href="/barecss/site/basics/details.html">Details</a>
+        <div style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/basics/link.html">Link</a><a class="_a2" href="/barecss/site/basics/details.html">Details</a>
         </div>
       </nav>
       <hr>
