--- a/site/lab/index.html
+++ b/site/lab/index.html
@@ -2,7 +2,7 @@
 <style>
   #logo {
     font-weight: 600;
-    margin-left: -.5rem;
+    margin-left: -.25rem;
     margin-right: .25rem;
     padding: .25rem .5rem;
     display: inline-block;
@@ -57,7 +57,7 @@
       <article>
         <hr>
         <section class="_container">
-          <div class="_color_1" style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/lab/test.html">Test</a>
+          <div style="margin:-.5rem !important"><a class="_a2" href="/barecss/site/lab/test.html">Test</a>
           </div>
         </section>
         <hr>
