--- a/site/core/index.html
+++ b/site/core/index.html
@@ -30,7 +30,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>BareCSS</title>
+    <title>Core | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -43,47 +43,20 @@
     <link id="_style" rel="stylesheet" media="all" href="/barecss/site/css/main.css">
     <link id="_style" rel="stylesheet" media="all" href="/barecss/site/css/custom.css">
     <style>/* write your style here */</style>
-    <style>
-      #logo {
-        display: block;
-        text-align: center;
-        font-size: 3em;
-        margin: 1em auto;
-      }
-      #maindesc {
-        display: block;
-        text-align: center;
-        position: relative;
-        top: -3em;
-        margin-bottom:1em;
-      }
-      header._container {
-        max-width:60em;
-        padding-left:.5rem;padding-right:.5rem;
-        margin-left:auto;margin-right:auto;
-      }
-    </style>
   </head>
   <body>
-    <header class="_container"><span>
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span id="maindesc">Minimal framework for a clean layout.</span>
+    <header class="_container"><a href="/barecss/site/">
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Core components.</span>
     </header>
     <hr>
     <main>
       <div class="_color_2">
-        <nav class="_container"><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        <nav class="_container"><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1 _active" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
         </nav>
       </div>
       <hr>
-      <article class="_container">
-        <pre class="_scrollable pre">Vision  : To create the best collection of clean layouts.
-
-Author  : Techie Joe
-Year    : 2025
-Version : 0.1.0.(alpha)
-
-LICENSE : MIT</pre>
-      </article>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
+      </nav>
       <aside id="_asides"></aside>
     </main>
     <footer>
