--- a/site/lab/test.html
+++ b/site/lab/test.html
@@ -17,7 +17,7 @@
   a #logo:hover { background-color:#fff }
   ._dark a #logo:hover { background-color:#fff3 }
   a #logo:active { opacity:.3 }
-  .maindesc {
+  #maindesc {
     font-size: 0.9em;
     line-height: 1.25;
     vertical-align: text-top;
@@ -41,66 +41,28 @@
     <link rel="icon" type="image/x-icon" sizes="any" href="/barecss/site/icons/favicon.ico"/>
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     <link id="_style" rel="stylesheet" media="all" href="/barecss/site/css/main.css">
+    <link id="_style" rel="stylesheet" media="all" href="/barecss/site/css/custom.css">
     <style>/* write your style here */</style>
     <style></style>
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span class="maindesc">Testing new stuff.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Testing new stuff.</span>
     </header>
     <hr>
     <main>
-      <nav class="_container">
-        <div class="_color_2" style="margin:-.5rem !important"><a class="_a1" href="/barecss/site/">Home</a><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/lab">Lab</a>
-        </div>
-      </nav>
+      <div class="_color_2">
+        <nav class="_container"><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        </nav>
+      </div>
       <article style="padding-bottom:1.8rem">
         <hr>
-        <section class="_container">
-          <div style="margin:-.5rem !important"><a class="_a2 _active" href="/barecss/site/lab/test.html">Test</a>
-          </div>
-        </section>
-        <hr>
-        <section class="_container"><span class="_u_dotted">Dotted</span> 
-          <span class="_u_dashed">Dashed</span> 
-          <span class="_u_double">Double</span> 
-          <span class="_u_wavy">Wavy</span> 
-        </section>
+        <nav class="_container"><a class="_a2 _active" href="/barecss/site/lab/test.html">Test</a><a class="_a2" href="/barecss/site/lab/temp.html">Temp</a>
+        </nav>
         <hr>
         <section class="_container">
-          <details>
-            <summary class="_no_select">Summary</summary>
-            <div class="_content _scrollable">
-              <div class="_container">
-                <pre class="_scrollable pre">
-name             = BareCSS
-version          = 0.1.0.(alpha)
-
-title            = Test | BareCSS
-description      = Testing new stuff.
-vision           = To create the best collection of clean layouts.
-
-author           = Techie Joe
-year             = 2025
-license          = MIT
-
-layout           = undefined
-pageid           = lab/test
-siteUrl          = https://techiejoe.github.io/barecss
-homeUri          = /barecss/site/
-
-og_url           = https://techiejoe.github.io/barecss?utm_source=homescreen
-og_type          = website
-og_title         = Test | BareCSS
-og_description   = Testing new stuff.
-og_image         = 
-og_imageAlt      = 
-</pre>
-              </div>
-            </div>
-          </details>
+          <pre class="_scrollable pre">// Tests goes here ..</pre>
         </section>
-        <hr>
       </article>
       <aside id="_asides"></aside>
     </main>
