--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   #logo {
     font-weight: 600;
     margin-left: -.25rem;
-    margin-right: .25rem;
+    margin-right: .5rem;
     padding: .25rem .5rem;
     display: inline-block;
     cursor: default;
@@ -66,7 +66,7 @@
   </head>
   <body>
     <header class="_container"><span>
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span id="maindesc">Minimal framework for a clean layout.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span id="maindesc">Minimal framework for a clean interface.</span>
     </header>
     <hr>
     <main>
@@ -76,9 +76,7 @@
       </div>
       <hr>
       <article class="_container">
-        <pre class="_scrollable pre">Vision  : To create the best collection of clean layouts.
-
-Author  : Techie Joe
+        <pre class="_scrollable pre">Author  : Techie Joe
 Year    : 2025
 Version : 0.1.0.(alpha)
 
