--- a/site/core/details.html
+++ b/site/core/details.html
@@ -3,7 +3,7 @@
   #logo {
     font-weight: 600;
     margin-left: -.25rem;
-    margin-right: .25rem;
+    margin-right: .5rem;
     padding: .25rem .5rem;
     display: inline-block;
     cursor: default;
@@ -71,7 +71,7 @@ version          = 0.1.0.(alpha)
 
 title            = Details | BareCSS
 description      = Styling details and summary elements.
-vision           = To create the best collection of clean layouts.
+vision           = undefined
 
 author           = Techie Joe
 year             = 2025
