--- a/site/lab/temp.html
+++ b/site/lab/temp.html
@@ -3,7 +3,7 @@
   #logo {
     font-weight: 600;
     margin-left: -.25rem;
-    margin-right: .25rem;
+    margin-right: .5rem;
     padding: .25rem .5rem;
     display: inline-block;
     cursor: default;
@@ -77,7 +77,7 @@ version          = 0.1.0.(alpha)
 
 title            = Temp | BareCSS
 description      = Temporary lab stuff.
-vision           = To create the best collection of clean layouts.
+vision           = undefined
 
 author           = Techie Joe
 year             = 2025
