--- a/site/core/details.html
+++ b/site/core/details.html
@@ -67,13 +67,12 @@
               <div class="_container">
                 <pre class="_scrollable pre">
 name             = BareCSS
-version          = 0.1.0.(alpha)
-
 title            = Details | BareCSS
 description      = Styling details and summary elements.
-vision           = undefined
+version          = 0.1.0.(alpha)
 
 author           = Techie Joe
+today            = Mon May 26 2025
 year             = 2025
 license          = MIT
 
