--- a/site/index.html
+++ b/site/index.html
@@ -76,11 +76,19 @@
       </div>
       <hr>
       <article class="_container">
-        <pre class="_scrollable pre">Author  : Techie Joe
-Year    : 2025
-Version : 0.1.0.(alpha)
+        <pre class="_scrollable pre">Name         : BareCSS
+Title        : BareCSS
+Description  : Minimal framework for a clean interface.
+Version      : 0.1.0.(alpha)
 
-LICENSE : MIT</pre>
+Author       : Techie Joe
+Year         : 2025
+LICENSE      : MIT
+
+URL          : https://techiejoe.github.io/barecss
+URI          : /barecss/site/ 
+
+Last updated : Mon May 26 2025</pre>
       </article>
       <aside id="_asides"></aside>
     </main>
