--- a/site/lab/temp.html
+++ b/site/lab/temp.html
@@ -73,13 +73,12 @@
               <div class="_container">
                 <pre class="_scrollable pre">
 name             = BareCSS
-version          = 0.1.0.(alpha)
-
 title            = Temp | BareCSS
 description      = Temporary lab stuff.
-vision           = undefined
+version          = 0.1.0.(alpha)
 
 author           = Techie Joe
+today            = Mon May 26 2025
 year             = 2025
 license          = MIT
 
