--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -55,7 +55,7 @@
         </nav>
       </div>
       <hr>
-      <nav class="_container">
+      <nav class="_container" style="padding:0 .25rem">
       </nav>
       <aside id="_asides"></aside>
     </main>
