--- a/site/core/details.html
+++ b/site/core/details.html
@@ -57,7 +57,7 @@
       </div>
       <article style="padding-bottom:1.8rem">
         <hr>
-        <nav class="_container"><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2 _active" href="/barecss/site/core/details.html">Details</a>
+        <nav class="_container" style="padding:0 .25rem"><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2 _active" href="/barecss/site/core/details.html">Details</a>
         </nav>
         <hr>
         <section class="_container">
