--- a/site/core/index.html
+++ b/site/core/index.html
@@ -55,7 +55,7 @@
         </nav>
       </div>
       <hr>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
+      <nav class="_container" style="padding:0 .25rem"><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
       </nav>
       <aside id="_asides"></aside>
     </main>
