--- a/site/lab/index.html
+++ b/site/lab/index.html
@@ -57,7 +57,7 @@
       </div>
       <article>
         <hr>
-        <nav class="_container"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2" href="/barecss/site/lab/temp.html">Temp</a>
+        <nav class="_container" style="padding:0 .25rem"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2" href="/barecss/site/lab/temp.html">Temp</a>
         </nav>
       </article>
       <aside id="_asides"></aside>
