--- a/site/core/link.html
+++ b/site/core/link.html
@@ -57,16 +57,16 @@
       </div>
       <article style="padding-bottom:1.8rem">
         <hr>
-        <nav class="_container"><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
+        <nav class="_container" style="padding:0 .25rem"><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
         </nav>
         <hr>
-        <section class="_container" style="margin:-.5rem 0 !important"><a class="_a2" href="#" id="hyperlink4">Hyperlink</a><a class="_a2 _link" href="#">Link</a><a class="_a2 _visited" href="#">Visited</a><a class="_a2 _hover" href="#">Hover</a><a class="_a2 _active" href="#">Active</a>
+        <nav class="_container"><a class="_a2" href="#" id="hyperlink4">Hyperlink</a><a class="_a2 _link" href="#">Link</a><a class="_a2 _visited" href="#">Visited</a><a class="_a2 _hover" href="#">Hover</a><a class="_a2 _active" href="#">Active</a>
           <script>document.getElementById('hyperlink4').href+='?t='+(new Date().getTime());</script>
-        </section>
+        </nav>
         <hr>
-        <section class="_container" style="margin:-.5rem 0 !important"><a class="_a1" href="#" id="hyperlink3">Hyperlink</a><a class="_a1 _link" href="#">Link</a><a class="_a1 _visited" href="#">Visited</a><a class="_a1 _hover" href="#">Hover</a><a class="_a1 _active" href="#">Active</a>
+        <nav class="_container"><a class="_a1" href="#" id="hyperlink3">Hyperlink</a><a class="_a1 _link" href="#">Link</a><a class="_a1 _visited" href="#">Visited</a><a class="_a1 _hover" href="#">Hover</a><a class="_a1 _active" href="#">Active</a>
           <script>document.getElementById('hyperlink3').href+='?t='+(new Date().getTime());</script>
-        </section>
+        </nav>
         <hr>
         <section class="_container"><a href="#" id="hyperlink">Hyperlink</a> 
           <a class="_link" href="#">Link</a> 
