--- a/site/lab/temp.html
+++ b/site/lab/temp.html
@@ -57,7 +57,7 @@
       </div>
       <article style="padding-bottom:1.8rem">
         <hr>
-        <nav class="_container"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2 _active" href="/barecss/site/lab/temp.html">Temp</a>
+        <nav class="_container" style="padding:0 .25rem"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2 _active" href="/barecss/site/lab/temp.html">Temp</a>
         </nav>
         <hr>
         <section class="_container"><span class="_u_dotted">Dotted</span> 
