--- a/site/core/text.html
+++ b/site/core/text.html
@@ -58,7 +58,7 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2 _active" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/image.html">Image</a><a class="_a2" href="/barecss/site/core/table.html">Table</a><a class="_a2" href="/barecss/site/core/button.html">Button</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
+      <nav class="_container"><a class="_a2 _active" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
       </nav>
       <hr>
       <article style="padding-bottom:1.8rem">
@@ -67,7 +67,6 @@
           <span class="_u_double">Double</span> 
           <span class="_u_wavy">Wavy</span> 
         </section>
-        <hr>
       </article>
       <aside id="_asides"></aside>
     </main>
