--- a/site/core/details.html
+++ b/site/core/details.html
@@ -58,7 +58,7 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/image.html">Image</a><a class="_a2" href="/barecss/site/core/table.html">Table</a><a class="_a2" href="/barecss/site/core/button.html">Button</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2 _active" href="/barecss/site/core/details.html">Details</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2 _active" href="/barecss/site/core/details.html">Details</a>
       </nav>
       <hr>
       <article style="padding-bottom:1.8rem">
@@ -72,7 +72,7 @@ name             = BareCSS
 version          = 0.1.0.alpha
 
 author           = Techie Joe
-today            = Mon May 26 2025
+today            = Tue Jun 10 2025
 year             = 2025
 license          = MIT
 
