--- a/site/core/link.html
+++ b/site/core/link.html
@@ -58,7 +58,7 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/image.html">Image</a><a class="_a2" href="/barecss/site/core/table.html">Table</a><a class="_a2" href="/barecss/site/core/button.html">Button</a><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
       </nav>
       <hr>
       <article style="padding-bottom:1.8rem">
@@ -83,7 +83,6 @@
           <a class="_link _u_wavy" href="#">Wavy</a> 
           <script>document.getElementById('hyperlink').href+='?t='+(new Date().getTime());</script>
         </section>
-        <hr>
       </article>
       <aside id="_asides"></aside>
     </main>
