--- a/site/core/blank.html
+++ b/site/core/blank.html
@@ -46,23 +46,21 @@
   </head>
   <body>
     <header class="_container">
-      <pre>Hello, there.
-
+      <pre class="_scrollable pre">Hello, there.
 This is a placeholder to get you started.
-
 Copy the code from 'core/blank' to create your own page.
 
-<a href="./">Back</a>
-</pre>
+<a class="_link _a31" href="./">Back</a></pre>
+      <hr>
     </header>
     <main>
       <article class="_container">
-        <pre>
+        <pre class="_scrollable pre">
 name             = BareCSS
 version          = 0.1.0.alpha
 
 author           = Techie Joe
-today            = Tue Jun 10 2025
+today            = Wed Jun 11 2025
 year             = 2025
 license          = MIT
 
