--- a/site/core/details.html
+++ b/site/core/details.html
@@ -52,13 +52,13 @@
     <hr class="_mb0"/>
     <div id="main_nav">
       <div class="_color_2">
-        <nav class="_container"><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        <nav class="_container"><a class="_a11" href="/barecss/site/basics">Basics</a><a class="_a11" href="/barecss/site/core">Core</a><a class="_a11" href="/barecss/site/lab">Lab</a>
         </nav>
       </div>
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2 _active" href="/barecss/site/core/details.html">Details</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2 _active" href="/barecss/site/core/details.html">Details</a><a class="_a2" href="/barecss/site/core/flex.html">Flex</a>
       </nav>
       <hr>
       <article style="padding-bottom:1.8rem">
@@ -72,7 +72,7 @@ name             = BareCSS
 version          = 0.1.0.alpha
 
 author           = Techie Joe
-today            = Tue Jun 10 2025
+today            = Wed Jun 11 2025
 year             = 2025
 license          = MIT
 
