--- a/site/core/html.html
+++ b/site/core/html.html
@@ -21,13 +21,11 @@
   <body>
     <header class="_container">
       <pre>Hello, there.
-
 This is a placeholder to get you started.
-
 Copy the code from 'core/html' to create your own page.
 
-<a href="./">Back</a>
-</pre>
+<a href="./">Back</a></pre>
+      <hr>
     </header>
     <main>
       <article class="_container">
@@ -36,7 +34,7 @@ name             = [project_name]
 version          = [version]
 
 author           = [unknown]
-today            = Tue Jun 10 2025
+today            = Wed Jun 11 2025
 year             = 2025
 license          = [unknown]
 
