--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -46,12 +46,12 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Common layouts.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Basic layouts.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
       <div class="_color_2">
-        <nav class="_container"><a class="_a1 _active" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        <nav class="_container"><a class="_a11 _active" href="/barecss/site/basics">Basics</a><a class="_a11" href="/barecss/site/core">Core</a><a class="_a11" href="/barecss/site/lab">Lab</a>
         </nav>
       </div>
     </div>
@@ -59,7 +59,11 @@
     <main>
       <nav class="_container">
       </nav>
-      <article></article>
+      <article style="padding-bottom:1.8rem">
+        <section class="_container">
+          <pre class="_scrollable pre">// Coming soon ..</pre>
+        </section>
+      </article>
       <aside id="_asides"></aside>
     </main>
     <footer>
