--- a/site/core/flex.html
+++ b/site/core/flex.html
@@ -6,7 +6,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>Temp | BareCSS</title>
+    <title>Flex | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -47,7 +47,7 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Temporary lab stuff.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Flex components.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
@@ -58,15 +58,46 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/lab/test.html">Test</a><a class="_a2 _active" href="/barecss/site/lab/temp.html">Temp</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2 _active" href="/barecss/site/core/flex.html">Flex</a>
       </nav>
       <hr>
-      <article style="padding-bottom:1.8rem">
-        <section class="_container">
-          <pre class="_scrollable pre">// New features to be implemented soon ..</pre>
-        </section>
-        <section class="_container">
-          <pre class="pre"></pre>
+      <article>
+        <section>
+          <style>
+            ._flex {
+              gap:.5rem;
+            }
+            .i {
+              padding:.25em .5em;
+              text-align: center;
+              font-size:.8em;
+            }
+            ._f {
+              padding:.25em .5em;
+              text-align: center;
+              font-size:.8em;
+            }
+          </style>
+          <div class="_flex">
+            <div class="i _outline">Normal Item 1</div>
+            <div class="_f _outline">Flex Item 2</div>
+            <div class="i _outline">Normal Item 2</div>
+            <div class="_f _outline">Flex Item 3</div>
+            <div class="i _outline">Normal Item 3</div>
+          </div>
+          <hr>
+          <div class="_flex">
+            <div class="_f _outline">Flex Item 1</div>
+            <div class="_f _outline">Flex Item 2</div>
+            <div class="_f _outline">Flex Item 3</div>
+          </div>
+          <hr>
+          <div class="_flex">
+            <div class="i _outline">Normal Item 1</div>
+            <div class="i _outline">Normal Item 2</div>
+            <div class="i _outline">Normal Item 3</div>
+          </div>
+          <hr>
         </section>
       </article>
       <aside id="_asides"></aside>
