--- a/site/core/link.html
+++ b/site/core/link.html
@@ -47,29 +47,41 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Styling hyperlinks.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Intuitive hyperlink styles.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
       <div class="_color_2">
-        <nav class="_container"><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        <nav class="_container"><a class="_a11" href="/barecss/site/basics">Basics</a><a class="_a11" href="/barecss/site/core">Core</a><a class="_a11" href="/barecss/site/lab">Lab</a>
         </nav>
       </div>
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2" href="/barecss/site/core/flex.html">Flex</a>
       </nav>
       <hr>
       <article style="padding-bottom:1.8rem">
-        <nav class="_container"><a class="_a2" href="#" id="hyperlink4">Hyperlink</a><a class="_a2 _link" href="#">Link</a><a class="_a2 _visited" href="#">Visited</a><a class="_a2 _hover" href="#">Hover</a><a class="_a2 _active" href="#">Active</a>
-          <script>document.getElementById('hyperlink4').href+='?t='+(new Date().getTime());</script>
+        <nav class="_container"><a class="_a31" href="#" id="hyperlink31">Hyperlink</a><a class="_a31 _link" href="#">Link</a><a class="_a31 _visited" href="#">Visited</a><a class="_a31 _hover" href="#">Hover</a><a class="_a31 _active" href="#">Active</a>
+          <script>document.getElementById('hyperlink31').href+='?t='+(new Date().getTime());</script>
         </nav>
-        <hr class="_mb0">
-        <nav class="_color_2"><a class="_a1" href="#" id="hyperlink3">Hyperlink</a><a class="_a1 _link" href="#">Link</a><a class="_a1 _visited" href="#">Visited</a><a class="_a1 _hover" href="#">Hover</a><a class="_a1 _active" href="#">Active</a>
+        <hr class="_m0">
+        <nav class="_container"><a class="_a3" href="#" id="hyperlink3">Hyperlink</a><a class="_a3 _link" href="#">Link</a><a class="_a3 _visited" href="#">Visited</a><a class="_a3 _hover" href="#">Hover</a><a class="_a3 _active" href="#">Active</a>
           <script>document.getElementById('hyperlink3').href+='?t='+(new Date().getTime());</script>
         </nav>
-        <hr class="_mt0">
+        <hr class="_m0">
+        <nav class="_container"><a class="_a2" href="#" id="hyperlink2">Hyperlink</a><a class="_a2 _link" href="#">Link</a><a class="_a2 _visited" href="#">Visited</a><a class="_a2 _hover" href="#">Hover</a><a class="_a2 _active" href="#">Active</a>
+          <script>document.getElementById('hyperlink2').href+='?t='+(new Date().getTime());</script>
+        </nav>
+        <hr class="_m0">
+        <nav class="_color_2"><a class="_a11" href="#" id="hyperlink11">Hyperlink</a><a class="_a11 _link" href="#">Link</a><a class="_a11 _visited" href="#">Visited</a><a class="_a11 _hover" href="#">Hover</a><a class="_a11 _active" href="#">Active</a>
+          <script>document.getElementById('hyperlink11').href+='?t='+(new Date().getTime());</script>
+        </nav>
+        <hr class="_m0">
+        <nav class="_color_2"><a class="_a1" href="#" id="hyperlink1">Hyperlink</a><a class="_a1 _link" href="#">Link</a><a class="_a1 _visited" href="#">Visited</a><a class="_a1 _hover" href="#">Hover</a><a class="_a1 _active" href="#">Active</a>
+          <script>document.getElementById('hyperlink1').href+='?t='+(new Date().getTime());</script>
+        </nav>
+        <hr class="_m0">
         <section class="_container"><a href="#" id="hyperlink">Hyperlink</a> 
           <a class="_link" href="#">Link</a> 
           <a class="_visited" href="#">Visited</a> 
