--- a/site/core/text.html
+++ b/site/core/text.html
@@ -6,7 +6,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>Details | BareCSS</title>
+    <title>Text | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -47,18 +47,18 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Styling details and summary elements.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Text elements are kept tidy and functional.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
       <div class="_color_2">
-        <nav class="_container"><a class="_a1" href="/barecss/site/basics">Basics</a><a class="_a1" href="/barecss/site/core">Core</a><a class="_a1" href="/barecss/site/lab">Lab</a>
+        <nav class="_container"><a class="_a11" href="/barecss/site/basics">Basics</a><a class="_a11" href="/barecss/site/core">Core</a><a class="_a11" href="/barecss/site/lab">Lab</a>
         </nav>
       </div>
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2 _active" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a>
+      <nav class="_container"><a class="_a2 _active" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2" href="/barecss/site/core/flex.html">Flex</a>
       </nav>
       <hr>
       <article style="padding-bottom:1.8rem">
