--- a/site/lab/index.html
+++ b/site/lab/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Testing upcoming features and upgrades.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Laboratory for upcoming features and upgrades.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
