--- a/site/basics/index.html
+++ b/site/basics/index.html
@@ -46,7 +46,7 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Basic layouts.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Basic blocks.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
