--- a/site/index.html
+++ b/site/index.html
@@ -66,7 +66,7 @@
   </head>
   <body>
     <header class="_container"><span>
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span id="maindesc">Minimal framework for a clean interface.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span id="maindesc">Simple framework for a clean interface.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
@@ -80,7 +80,7 @@
       <article class="_container">
         <pre class="_scrollable pre">Name         : BareCSS
 Title        : BareCSS
-Description  : Minimal framework for a clean interface.
+Description  : Simple framework for a clean interface.
 Version      : 0.1.0.alpha
 
 Author       : Techie Joe
