--- a/site/core/link.html
+++ b/site/core/link.html
@@ -58,10 +58,10 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2" href="/barecss/site/core/flex.html">Flex</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/basic.html">Basic</a><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/table.html">Table</a><a class="_a2 _active" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2" href="/barecss/site/core/flex.html">Flex</a>
       </nav>
       <hr>
-      <article style="padding-bottom:1.8rem">
+      <article style="padding-bottom:4rem">
         <nav class="_container"><a class="_a31" href="#" id="hyperlink31">Hyperlink</a><a class="_a31 _link" href="#">Link</a><a class="_a31 _visited" href="#">Visited</a><a class="_a31 _hover" href="#">Hover</a><a class="_a31 _active" href="#">Active</a>
           <script>document.getElementById('hyperlink31').href+='?t='+(new Date().getTime());</script>
         </nav>
@@ -86,13 +86,13 @@
           <a class="_link" href="#">Link</a> 
           <a class="_visited" href="#">Visited</a> 
           <a class="_hover" href="#">Hover</a> 
-          <a class="_active" href="#">Active</a> <br><a class="_neutral" href="#">Neutral</a> 
-          <a class="_no_color" href="#">No-Color</a> 
-          Normal<br><a class="_link _no_u" href="#">No-Underline</a> 
-          <a class="_link _u_dotted" href="#">Dotted</a> 
-          <a class="_link _u_dashed" href="#">Dashed</a> 
-          <a class="_link _u_double" href="#">Double</a> 
-          <a class="_link _u_wavy" href="#">Wavy</a> 
+          <a class="_active" href="#">Active</a> 
+          <a class="_no_color" href="#">No-Color</a> <br><a class="_hover_link" href="#">Hover-Link</a> 
+          <a class="_hover_link _u_dotted" href="#">Dotted</a> 
+          <a class="_hover_link _u_dashed" href="#">Dashed</a> 
+          <a class="_hover_link _u_double" href="#">Double</a> 
+          <a class="_hover_link _u_wavy" href="#">Wavy</a> <br><a class="_hover_link _no_u" href="#">No-Underline</a> 
+          <a class="_hover_link _no_u _hover_u" href="#">Hover-Underline</a> <br>
           <script>document.getElementById('hyperlink').href+='?t='+(new Date().getTime());</script>
         </section>
       </article>
