--- a/site/core/flex.html
+++ b/site/core/flex.html
@@ -58,10 +58,10 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2 _active" href="/barecss/site/core/flex.html">Flex</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/basic.html">Basic</a><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/table.html">Table</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2 _active" href="/barecss/site/core/flex.html">Flex</a>
       </nav>
       <hr>
-      <article>
+      <article style="padding-bottom:4em">
         <section>
           <style>
             ._flex {
