--- a/site/core/table.html
+++ b/site/core/table.html
@@ -6,7 +6,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title>Details | BareCSS</title>
+    <title>Table | BareCSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -47,7 +47,7 @@
   </head>
   <body>
     <header class="_container"><a href="/barecss/site/">
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Styling details and summary elements.</span>
+        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></a><span id="maindesc">Table styles.</span>
     </header>
     <hr class="_mb0"/>
     <div id="main_nav">
@@ -58,44 +58,80 @@
     </div>
     <hr class="_mt0"/>
     <main>
-      <nav class="_container"><a class="_a2" href="/barecss/site/core/basic.html">Basic</a><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2" href="/barecss/site/core/table.html">Table</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2 _active" href="/barecss/site/core/details.html">Details</a><a class="_a2" href="/barecss/site/core/flex.html">Flex</a>
+      <nav class="_container"><a class="_a2" href="/barecss/site/core/basic.html">Basic</a><a class="_a2" href="/barecss/site/core/text.html">Text</a><a class="_a2 _active" href="/barecss/site/core/table.html">Table</a><a class="_a2" href="/barecss/site/core/link.html">Link</a><a class="_a2" href="/barecss/site/core/details.html">Details</a><a class="_a2" href="/barecss/site/core/flex.html">Flex</a>
       </nav>
       <hr>
-      <article style="padding-bottom:4em">
-        <section class="_container">
-          <details>
-            <summary class="_no_select">Summary</summary>
-            <div class="_content _scrollable">
-              <div class="_container">
-                <pre class="_scrollable pre">
-name             = BareCSS
-version          = 0.1.0.alpha
-
-author           = Techie Joe
-today            = Wed Jun 11 2025
-year             = 2025
-license          = MIT
-
-title            = Details | BareCSS
-description      = Styling details and summary elements.
-
-layout           = main/_html
-pageid           = core/details
-siteUrl          = https://techiejoe.github.io/barecss
-homeUri          = /barecss/site/
-
-og_url           = https://techiejoe.github.io/barecss?utm_source=homescreen
-og_type          = website
-og_title         = Details | BareCSS
-og_description   = Styling details and summary elements.
-og_image         = undefined
-og_imageAlt      = undefined
-</pre>
-              </div>
-            </div>
-          </details>
+      <article style="padding-bottom:4rem">
+        <section class="_container _flex" style="gap:1rem">
+          <div class="_f">
+            <table class="_table _center_m">
+              <thead>
+                <tr>
+                  <th>Item</th>
+                  <th>Description</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Apple</td>
+                  <td>A sweet red fruit</td>
+                  <td>$1.00</td>
+                </tr>
+                <tr>
+                  <td>Banana</td>
+                  <td>A long yellow fruit</td>
+                  <td>$0.50</td>
+                </tr>
+                <tr>
+                  <td>Cherry</td>
+                  <td>A small red fruit</td>
+                  <td>$0.20</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="2">Total</td>
+                  <td>$1.70</td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
+          <div class="_f">
+            <table class="_center_m">
+              <thead>
+                <tr>
+                  <th>Item</th>
+                  <th>Description</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Apple</td>
+                  <td>A sweet red fruit</td>
+                  <td>$1.00</td>
+                </tr>
+                <tr>
+                  <td>Banana</td>
+                  <td>A long yellow fruit</td>
+                  <td>$0.50</td>
+                </tr>
+                <tr>
+                  <td>Cherry</td>
+                  <td>A small red fruit</td>
+                  <td>$0.20</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="2">Total</td>
+                  <td>$1.70</td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
         </section>
-        <hr>
       </article>
       <aside id="_asides"></aside>
     </main>
