--- a/site/index.html
+++ b/site/index.html
@@ -51,21 +51,17 @@
         margin: 1em auto;
       }
       #maindesc {
-        display: block;
         text-align: center;
         position: relative;
         top: -3em;
-        margin-bottom:1em;
-      }
-      header._container {
-        max-width:60em;
-        padding-left:.5rem;padding-right:.5rem;
+        margin:1em auto;
       }
     </style>
   </head>
   <body>
-    <header class="_container _center_m _table"><span>
-        <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div></span><span id="maindesc">Simple framework for a clean interface.</span>
+    <header class="_center_m _table">
+      <div class="_no_select" id="logo"><span class="s1">Bare</span><span class="s2">CSS</span></div>
+      <div id="maindesc">Simple framework for websites and web applications.</div>
     </header>
     <hr class="_m0"/>
     <div id="main_nav">
@@ -79,7 +75,7 @@
       <article class="_container">
         <pre class="_scrollable pre">Name         : BareCSS
 Title        : BareCSS
-Description  : Simple framework for a clean interface.
+Description  : Simple framework for websites and web applications.
 Version      : 0.1.0.alpha
 
 Author       : Techie Joe
